--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">My beautiful wife 💞</span><br>
+                    <span class="say">Shouaaa Ziaaa 💞</span><br>
                     <span class="say">Happy Birthday 🎈</span><br>
                     <span class="say">May Allah bless you 🍀</span><br>
                     <span class="say">And give u many happiness 💕</span><br>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div id="clock-box">
-                <span id="clock">577 days 0 hours 0 minutes 0 seconds</span> <!-- Change to "6940 days..." if needed -->
+                <span id="clock">157680 hours 0 minutes 0 seconds</span> <!-- Change to "6940 days..." if needed -->
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
         </div>
